--- a/src/index.html
+++ b/src/index.html
@@ -46,9 +46,9 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Umidjon Ziyatdinov</span>
           <br />
-          I'm the Unknown Developer.
+          I'm Frontend Developer.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -71,7 +71,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="assets/profile.jpg"
+                src="assets/hero.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -79,8 +79,9 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you can!
+                A motivated individual with in-depth knowledge of languages and development tools, seeking a position in a
+                growth-oriented company where I can use my skills to the advantage of the company while having the
+                scope to develop my own skills.
               </p>
               <p class="about-wrapper__info-text">
                 Extra Information about you! like hobbies and your goals.
@@ -90,7 +91,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/resume.pdf"
+                  href="assets/resume1.pdf"
                 >
                   View Resume
                 </a>
@@ -136,7 +137,7 @@
                   class="cta-btn text-color-main"
                   href="#!"
                 >
-                  Source Code
+                  Source Code ok
                 </a>
               </div>
             </div>
