--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="assets/hero.jpg"
+                src="assets/profile.jpg"
                 alt="Profile Image"
               />
             </div>
