--- a/src/index.html
+++ b/src/index.html
@@ -280,13 +280,13 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:uziyatdinov@gmail.com"
+            >Send Email</a
           >
         </div>
       </div>
@@ -300,13 +300,11 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
-          </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+         
+          <a rel="noreferrer" href="https://www.linkedin.com/in/umidjon-ziyatdinov-226359203/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://github.com/Umidjon555" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -315,9 +313,8 @@
 
         <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
         <p class="footer__text">
-          © 2021 - Template developed by
-          <a rel="noreferrer" href="https://github.com/cobidev" target="_blank"
-            >Jacobo Martínez</a
+          <a rel="noreferrer" href="https://github.com/Umidjon555" target="_blank"
+            >Umidjon Ziyatdinov</a
           >
         </p>
 
@@ -326,7 +323,7 @@
           <a
             rel="noreferrer"
             class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
+            href="https://github.com/Umidjon555"
             data-icon="octicon-repo-forked"
             data-size="large"
             data-show-count="true"
