--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="react-dashboard-sales.netlify.app"
                 >
                   See Live
                 </a>
@@ -135,9 +135,9 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/Umidjon555/react_responsive_dashboard"
                 >
-                  Source Code ok
+                  Source Code
                 </a>
               </div>
             </div>
