--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="react-dashboard-sales.netlify.app"
+                  href="https://react-dashboard-sales.netlify.app"
                 >
                   See Live
                 </a>
