1st project updated

--- a/src/index.html
+++ b/src/index.html
@@ -116,11 +116,10 @@
                 <h3 class="project-wrapper__text-title">Project Title 0</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    An Admin Dashboard is a visual representation of your whole data set. While it can be used in various ways, its primary
+                    function is to allow quick access to information, such as APIs. An Admin Dashboard is often shown on its own website and
+                    receives data from a linked database.
+                    This Project is Responsive and interactive Admin Dashboard using the well-known React JavaScript framework, plus SASS.
                   </p>
                 </div>
                 <a
@@ -135,7 +134,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="https://github.com/Umidjon555/react_responsive_dashboard"
+                  href="https://github.com/Umidjon555/react_sales_dashboard"
                 >
                   Source Code
                 </a>
