1st project done

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>[Umidjon Ziyatdinov] | Frontend Developer</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Todo: improve your SEO by adding a small description of you -->
@@ -119,6 +119,8 @@
                     An Admin Dashboard is a visual representation of your whole data set. While it can be used in various ways, its primary
                     function is to allow quick access to information, such as APIs. An Admin Dashboard is often shown on its own website and
                     receives data from a linked database.
+                    </p>
+                  <p class="mb-4">
                     This Project is Responsive and interactive Admin Dashboard using the well-known React JavaScript framework, plus SASS.
                   </p>
                 </div>
@@ -153,7 +155,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/1stproject.png"
                     />
                   </div>
                 </a>
