--- a/src/index.html
+++ b/src/index.html
@@ -168,32 +168,23 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">Sokcho Virtual Art Exhibition</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    In recent years, curators and educators have increasingly started exploring the many possibilities offered by virtual
+                    exhibitions. Hundreds of institutions have made 3-D tours of their galleries available online through Google Arts &
+                    Culture and similar platforms, allowing visitors from around the world to virtually “wander” through Sokcho Virtual Art Exhibition.
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://www.artsteps.com/view/6385eecac0a4cb48a0e1c18a/?currentUser"
                 >
                   See Live
                 </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
-                  Source Code
-                </a>
+         
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
@@ -209,7 +200,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/art1.png"
                     />
                   </div>
                 </a>
