--- a/src/index.html
+++ b/src/index.html
@@ -180,7 +180,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="https://www.artsteps.com/view/6385eecac0a4cb48a0e1c18a/?currentUser"
+                  href="https://www.artsteps.com/view/6385eecac0a4cb48a0e1c18ar"
                 >
                   See Live
                 </a>
